# BD

Lesson1/Task1/: База данных для муз.сайта.vsd
Lesson2/Task1/: Script-1.sql  Диаграмма без названия.drawio
Lesson2/Task2/: Script.sql
Lesson3/: Script-1.sql  Script-3.sql  Script-4.sql
Lesson4/Task1/: Script1.sql  Script2.sql
Lesson4/Task2/: Script3.sql
Lesson4/Task3/: Script4.sql
Lesson4/Task4/: Script5.sql
Lesson5/: CMakeLists.txt  graph.txt  use_phone_book.cpp
Lesson5/phone_book/: CMakeLists.txt  phone_book.cpp  phone_book.hpp
Lesson5/user_interconnection/: CMakeLists.txt  user_interconnection.cpp  user_interconnection.hpp
Lesson6/Task1/WtdboTest/: WtdboTest.cpp  WtdboTest.vcxproj
Lesson6/Task1/orm_wtdbo/: orm_wtdbo.cpp  orm_wtdbo.sln  orm_wtdbo.vcxproj  orm_wtdbo.vcxproj.filters
Lesson6/Task2/WtdboTest/: WtdboTest.cpp  WtdboTest.sln
Lesson6/Task2/WtdboTest2/: WtdboTest2.cpp  WtdboTest2.sln  WtdboTest2.vcxproj  WtdboTest2.vcxproj.filters
Lesson6/Task2/orm_wtdbo_task2/: orm_wtdbo_task2.cpp  orm_wtdbo_task2.sln  orm_wtdbo_task2.vcxproj  orm_wtdbo_task2.vcxproj.filters
Lesson6/WtdboTest/: WtdboTest.vcxproj.filters
