cmake_minimum_required(VERSION 3.2)
set(CMAKE_CXX_STANDARD 17)
project(use_phone_book)
add_executable(use_phone_book use_phone_book.cpp)
add_subdirectory(${PROJECT_SOURCE_DIR}/libpqxx)
add_subdirectory(${PROJECT_SOURCE_DIR}/phone_book)

include_directories(${PROJECT_SOURCE_DIR}/phone_book)
target_link_libraries(use_phone_book pqxx)
target_link_libraries(use_phone_book phone_book)
